docs/versions/0.5.11/website/src/content/docs/install.mdx
---
title: Install Herdr
description: Install, update, and verify Herdr on Linux and macOS.
---

Herdr ships as a single binary for Linux and macOS.

## Install

Run the installer:

```bash
curl -fsSL https://herdr.dev/install.sh | sh
```

The installer downloads the right release binary for your platform and places it on your PATH.

## Verify

Start Herdr:

```bash
herdr
```

If your shell cannot find `herdr`, restart the terminal or check that the install directory is on your PATH.

## Update

Herdr checks for new releases and notifies you in the app. You can update manually:

```bash
herdr update
```

## Download manually

You can also download a binary from [GitHub releases](https://github.com/herdrdev/herdr/releases).

Choose the asset that matches your system:

| System | Asset |
| --- | --- |
| Linux x86_64 | `herdr-linux-x86_64` |
| Linux aarch64 | `herdr-linux-aarch64` |
| macOS Intel | `herdr-macos-x86_64` |
| macOS Apple silicon | `herdr-macos-aarch64` |

Make it executable and move it somewhere on your PATH.

```bash
chmod +x herdr-linux-x86_64
mv herdr-linux-x86_64 ~/.local/bin/herdr
```

## Requirements

Herdr supports Linux and macOS. Native Windows support is not available yet; use Herdr inside WSL for now.
